--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                                 <p class="item2_text">나이아신아마이드와 아데노신의 함류로<br>
                                     미백과 주름개선 효과 탁월<br>
                                     충분한 수분공급으로 건조하고 푸석한 피부에 영양공급<br>
-                                    예민한 피부를 진정시켜주는 sooting cream</p>
+                                    예민한 피부를 진정시켜주는 sooting serum</p>
                                 <ul class="button2">
                                     <li><a href="javascript:return false;">구매하기</a></li>
                                 </ul>
@@ -579,8 +579,8 @@
             <div class="banner4_wrap">
                 <p class="banner4_title">ONANDOFF</p>
                 <p class="banner4_text">For clear and clean skin,</p>
-                <p class="banner4_text2">ONANDOFF는 해양심층수를 사용하여예민하고
-                    건조한 피부를 편안하고 깨긋한 피부로 만들어드립니다.</p>
+                <p class="banner4_text2">ONANDOFF는 해양심층수를 사용하여 예민하고
+                    건조한 피부를 편안하고 깨끗한 피부로 만들어드립니다.</p>
             </div>
         </div>
         <!--banner4 end-->
